--- a/QuickSort/style.css
+++ b/QuickSort/style.css
@@ -3,21 +3,18 @@
     padding: 0px;
     box-sizing: border-box;
 }
-  
 .header {
     font-size: 20px;
     text-align: center;
 }
-  
 #array {
     background-color: white;
-    height: 413px;
+    height: 278px;
     width: 598px;
     margin: auto;
     position: relative;
     margin-top: 64px;
 }
-  
 .block {
     width: 28px;
     background-color: #6b5b95;
@@ -25,11 +22,35 @@
     bottom: 0px;
     transition: 0.2s all ease;
 }
-  
 .block_id {
     position: absolute;
     color: black;
     margin-top: -20px;
     width: 100%;
     text-align: center;
+}
+.block_id2 {
+    position: absolute;
+    color: black;
+    margin-top: 22px;
+    width: 100%;
+    text-align: center;
+}
+.block2 {
+    width: 28px;
+    background-color: darkgray;
+    position: absolute;
+    transition: 0.2s all ease;
+}
+.block_id3 {
+    position: absolute;
+    color: black;
+    margin-top: 1px;
+    width: 100%;
+    text-align: center;
+}
+#count {
+    height: 20px;
+    width: 598px;
+    margin: auto;
 }
